@@ -29,6 +29,11 @@ has always_recommend => (
     predicate => '_has_always_recommend',
 );
 
+has require_develop => (
+    is => 'ro', isa => Bool,
+    default => 1,
+);
+
 has default => (
     is => 'ro', isa => Bool,
     predicate => '_has_default',
@@ -68,8 +73,8 @@ around BUILDARGS => sub
     # pull these out so they don't become part of our prereq list
     my ($zilla, $plugin_name) = delete @{$args}{qw(zilla plugin_name)};
 
-    my ($feature_name, $description, $always_recommend, $default, $phase) =
-        delete @{$args}{qw(-name -description -always_recommend -default -phase)};
+    my ($feature_name, $description, $always_recommend, $require_develop, $default, $phase) =
+        delete @{$args}{qw(-name -description -always_recommend -require_develop -default -phase)};
     my ($type) = grep { defined } delete @{$args}{qw(-type -relationship)};
 
     my @other_options = grep { /^-/ } keys %$args;
@@ -102,6 +107,7 @@ around BUILDARGS => sub
         defined $feature_name ? ( name => $feature_name ) : (),
         defined $description ? ( description => $description ) : (),
         defined $always_recommend ? ( always_recommend => $always_recommend ) : (),
+        defined $require_develop ? ( require_develop => $require_develop ) : (),
         defined $default ? ( default => $default ) : (),
         defined $phase ? ( _prereq_phase => $phase ) : (),
         defined $type ? ( _prereq_type => $type ) : (),
@@ -120,7 +126,7 @@ around dump_config => sub
         # FIXME: YAML::Tiny does not handle leading - properly yet
         # (map { defined $self->$_ ? ( '-' . $_ => $self->$_ ) : () }
         (map { defined $self->$_ ? ( $_ => $self->$_ ) : () }
-            qw(name description always_recommend default)),
+            qw(name description always_recommend require_develop default)),
         phase => $self->_prereq_phase,
         type => $self->_prereq_type,
         prereqs => $self->_prereqs,
@@ -139,7 +145,7 @@ sub register_prereqs
             phase => 'develop',
         },
         %{ $self->_prereqs },
-    );
+    ) if $self->require_develop;
 
     return if not $self->always_recommend;
     $self->zilla->register_prereqs(
@@ -266,7 +272,14 @@ Defaults to the feature name, if not provided.
 If set with a true value, the prerequisites are added to the distribution's
 metadata as recommended prerequisites (e.g. L<cpanminus> will install
 recommendations with C<--with-recommends>, even when running
-non-interactively). Defaults to 0, but I recommend you turn this on.
+non-interactively). Defaults to false, but I recommend you turn this on.
+
+=item * C<-require_develop>
+
+If set with a true value, the prerequisites are added to the distribution's
+metadata as develop requires prerequisites (e.g. L<cpanminus> will install
+recommendations with C<--with-develop>, even when running
+non-interactively).  Defaults to true.
 
 =item * C<-default>
 
