@@ -62,6 +62,7 @@ use SpecCompliant;
                             name => 'FeatureName',
                             description => 'FeatureName',
                             always_recommend => 0,
+                            require_develop => 1,
                             phase => 'runtime',
                             type => 'requires',
                             prereqs => { A => 0 },
@@ -128,6 +129,7 @@ use SpecCompliant;
                             name => 'FeatureName',
                             description => 'desc',
                             always_recommend => 1,
+                            require_develop => 1,
                             phase => 'build',
                             type => 'suggests',
                             prereqs => { A => 0 },
@@ -196,6 +198,7 @@ use SpecCompliant;
                             name => 'FeatureName',
                             description => 'desc',
                             always_recommend => 1,
+                            require_develop => 1,
                             phase => 'test',
                             type => 'requires',
                             prereqs => { A => 0 },
@@ -263,6 +266,7 @@ use SpecCompliant;
                             name => 'FeatureName',
                             description => 'desc',
                             always_recommend => 0,
+                            require_develop => 1,
                             phase => 'test',
                             type => 'requires',
                             prereqs => { A => 0 },
@@ -330,6 +334,7 @@ use SpecCompliant;
                             name => 'FeatureName',
                             description => 'desc',
                             always_recommend => 0,
+                            require_develop => 1,
                             phase => 'test',
                             type => 'suggests',
                             prereqs => { A => 0 },
@@ -401,6 +406,7 @@ use SpecCompliant;
                             name => 'FeatureName',
                             description => 'desc',
                             always_recommend => 0,
+                            require_develop => 1,
                             phase => 'test',
                             type => 'requires',
                             prereqs => { A => 0 },
@@ -416,6 +422,7 @@ use SpecCompliant;
                             name => 'FeatureName',
                             description => 'desc',
                             always_recommend => 0,
+                            require_develop => 1,
                             phase => 'runtime',
                             type => 'requires',
                             prereqs => { B => 0 },
